feat : 프로젝트 세팅, Modal, Button 컴포넌트 추가
vite.config.ts, tsconfig 절대 경로 설정 추가
global Modal 세팅, 컴포넌트 추가
resetStyle, globalStyle 설정, font theme 추가
Button 컴포넌트 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     /* 절대경로 적용*/
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["src/*"]
+      "@/*": ["./src/*"]
     },
 
     /* Bundler mode */
