--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
+    "styled-reset": "^4.5.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
