--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@tanstack/react-query": "^5.7.2",
     "axios": "^1.6.0",
     "force": "^0.0.3",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
+    "react-script-hook": "^1.7.2",
     "styled-components": "^6.1.0",
     "styled-reset": "^4.5.1",
+    "swiper": "^11.0.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
