--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem react-scripts start",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -23,6 +24,7 @@
     "styled-components": "^6.1.0",
     "styled-reset": "^4.5.1",
     "swiper": "^11.0.4",
+    "vite-plugin-mkcert": "^1.16.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
